<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright 2014 Jay Soyer
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="com.sawyer.advadapters.app.adapters.AdapterActivity">

	<item
		android:id="@+id/menu_action_search"
		android:actionViewClass="android.widget.SearchView"
		android:icon="@drawable/ic_action_action_search"
		android:orderInCategory="100"
		android:showAsAction="always|collapseActionView"
		android:title="@string/menu_search"/>

	<item
		android:id="@+id/menu_action_sort"
		android:icon="@drawable/ic_action_a_z"
		android:orderInCategory="101"
		android:showAsAction="ifRoom"
		android:title="@string/menu_sort"/>

	<item
		android:id="@+id/menu_action_reset"
		android:icon="@drawable/ic_action_navigation_refresh"
		android:orderInCategory="102"
		android:showAsAction="ifRoom"
		android:title="@string/menu_reset"/>

	<item
		android:id="@+id/menu_action_clear"
		android:icon="@drawable/ic_action_content_discard"
		android:orderInCategory="103"
		android:showAsAction="ifRoom"
		android:title="@string/menu_clear"/>

	<item
		android:id="@+id/menu_action_info"
		android:orderInCategory="200"
		android:showAsAction="never"
		android:title="@string/menu_info"/>

</menu>
