<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Jay Soyer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:showDividers="middle"
	android:divider="?android:dividerHorizontal"
	android:orientation="vertical">

	<RadioGroup
		android:id="@+id/radio_group"
		android:layout_width="match_parent"
		android:layout_marginLeft="@dimen/spacing_normal"
		android:layout_marginStart="@dimen/spacing_normal"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<RadioButton
			android:id="@+id/choice_mode_single"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_choice_mode_single"/>

		<RadioButton
			android:id="@+id/choice_mode_single_modal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_choice_mode_single_modal"/>

		<RadioButton
			android:id="@+id/choice_mode_multiple"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_choice_mode_multiple"/>

		<RadioButton
			android:id="@+id/choice_mode_multiple_modal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_choice_mode_multiple_modal"/>
	</RadioGroup>

	<Button
		android:id="@+id/ok"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/BorderlessButtonStyle"
		android:text="@android:string/ok"/>

</LinearLayout>