<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright 2014 Jay Soyer
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout
	style="?android:buttonBarStyle"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

	<Button
		android:id="@+id/movie_insert_start_btn"
		style="?android:buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/btn_insert_start"/>

	<Button
		android:id="@+id/movie_insert_random_btn"
		style="?android:buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/btn_insert_random"/>

	<Button
		android:id="@+id/movie_insert_end_btn"
		style="?android:buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/btn_insert_end"/>
</LinearLayout>
