<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * By: JaySoyer
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context="com.sawyer.advadapters.app.adapters.AdapterActivity">

	<LinearLayout
		android:id="@+id/button_action_container"
		style="?android:buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/btn_flat_background"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_add_random"
			style="?android:buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/title_add"/>

		<Button
			android:id="@+id/button_contain"
			style="?android:buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/title_contains"/>

		<Button
			android:id="@+id/button_insert_random"
			style="?android:buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/title_insert"/>
	</LinearLayout>

	<FrameLayout
		android:id="@+id/frag_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	</FrameLayout>

</LinearLayout>
